Fixes broken display on mobile devices
This handles issue #13

--- a/src/module/Phpug/public/css/style.css
+++ b/src/module/Phpug/public/css/style.css
@@ -9,7 +9,7 @@ body {
     position:absolute;
     top:0px;
     bottom:0px;
-    padding-top:100px;
+    padding-top:100px!important;
     padding-bottom: 50px;
     left:0px;
     right:0px;
